--- a/projects/forge-angular/package.json
+++ b/projects/forge-angular/package.json
@@ -4,11 +4,11 @@
   "repository": "tyler-technologies/forge-angular",
   "author": "Tyler Technologies, Inc.",
   "license": "Apache-2.0",
-  "version": "1.0.0-dev.0",
+  "version": "2.0.0-rc.0",
   "peerDependencies": {
     "@angular/common": "^13.3.0",
     "@angular/core": "^13.3.0",
-    "@tylertech/forge": "^1.0.0-dev.2"
+    "@tylertech/forge": "^2.0.0-rc.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
