chore: fix `auto.config.ts` compilation [skip ci]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   }
 }
