--- a/projects/forge-angular/package.json
+++ b/projects/forge-angular/package.json
@@ -4,7 +4,7 @@
   "repository": "tyler-technologies/forge-angular",
   "author": "Tyler Technologies, Inc.",
   "license": "Apache-2.0",
-  "version": "2.0.0-rc.0",
+  "version": "0.0.0",
   "peerDependencies": {
     "@angular/common": "^13.3.0",
     "@angular/core": "^13.3.0",
