--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@tylertech/forge": "^2.0.0-rc.1",
+    "@tylertech/forge": "2.0.0-rc.2",
     "@tylertech/tyler-icons": "^1.12.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
