--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -25,6 +26,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@tylertech/angular-core": "^1.6.0",
     "@tylertech/forge": "^2.0.0-rc.1",
     "@tylertech/tyler-icons": "^1.12.0",
     "rxjs": "~7.5.0",
