--- a/projects/forge-angular/package.json
+++ b/projects/forge-angular/package.json
@@ -6,8 +6,8 @@
   "author": "Tyler Technologies, Inc.",
   "license": "Apache-2.0",
   "peerDependencies": {
-    "@angular/common": "^13.3.0",
-    "@angular/core": "^13.3.0",
+    "@angular/common": ">=13.3.0 < 15.0.0",
+    "@angular/core": ">=13.3.0 < 15.0.0",
     "@tylertech/forge": "^2.0.0"
   },
   "dependencies": {
