chore: create version branches on major releases [skip ci]

--- a/.autorc
+++ b/.autorc
@@ -6,3 +6,4 @@ plugins:
   - released
   - first-time-contributor
 author: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
+versionBranches: true
