--- a/.github/workflows/auto-pr-check.yml
+++ b/.github/workflows/auto-pr-check.yml
@@ -3,7 +3,7 @@ name: Pull Request Validation
 on:
   pull_request:
     branches:
-      - main
+      - version-2
     types: [opened, synchronize, reopened, labeled, unlabeled]
   workflow_dispatch:
     
