--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,7 +19,7 @@ on:
       - 'src/**/*'
   workflow_dispatch:
 
-concurrency: build-release-${{ github.ref }}
+concurrency: build-release
 
 jobs:
   ## Gather configuration required by other jobs
