--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "tyler-technologies-oss/forge-angular",
   "license": "Apache-2.0",
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "ng": "ng",
     "start": "npm run build && ng serve -o",
     "build": "ng build forge-angular --configuration production",
@@ -40,15 +40,15 @@
     "@auto-it/conventional-commits": "^11.1.6",
     "@auto-it/first-time-contributor": "^11.1.6",
     "@auto-it/npm": "^11.1.6",
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "@tylertech-eslint/eslint-plugin": "^1.0.9",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@tylertech-eslint/eslint-plugin": "^1.0.12",
     "@tylertech/forge-schematics": "^1.3.1",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^20.2.3",
+    "@types/node": "^20.14.2",
     "auto": "^11.1.6",
-    "commitlint": "^17.6.3",
-    "husky": "^7.0.4",
+    "commitlint": "^19.3.0",
+    "husky": "^9.0.11",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -57,6 +57,6 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^17.3.0",
     "typescript": "~5.4.5",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
