--- a/projects/forge-angular/package.json
+++ b/projects/forge-angular/package.json
@@ -8,9 +8,9 @@
   "peerDependencies": {
     "@angular/common": ">=17.00 < 19.0.0",
     "@angular/core": ">=17.0.0 < 19.0.0",
-    "@tylertech/forge": "^3.0.0-next.31"
+    "@tylertech/forge": "^3.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.6.3"
   }
 }
