--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@angular/platform-browser": "^17.3.7",
     "@angular/platform-browser-dynamic": "^17.3.7",
     "@angular/router": "^17.3.7",
-    "@tylertech/forge": "3.0.0-next.31",
+    "@tylertech/forge": "^3.0.0",
     "@tylertech/tyler-icons": "^1.12.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.3",
     "zone.js": "~0.14.5"
   },
   "devDependencies": {
