chore: prepare version-3 branch workflow

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,13 +1,9 @@
-## We only run this workflow on pushes to the main branch. This workflow will
-## first determine if a release is to be published, and if so, build and publish.
-## Otherwise, if not a release, we just perform CI build validation.
-
 name: Build and Release
 
 on:
   push:
     branches:
-      - main
+      - version-3
     paths:
       - '.github/workflows/**/*'
       - '.eslintrc.json'
@@ -31,7 +27,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Prepare Repository
-        # Fetch full git history and tags
         run: git fetch --unshallow --tags
 
       - name: Cache Dependencies
