chore: configure prerelease publishing

--- a/.autorc
+++ b/.autorc
@@ -7,3 +7,6 @@ plugins:
   - first-time-contributor
 author: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
 versionBranches: true
+prereleaseBranches: [version-3-ng17]
+shipit:
+  prerelease: true
