--- a/projects/forge-angular/package.json
+++ b/projects/forge-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tylertech/forge-angular",
   "version": "0.0.0",
-  "description": "Forge components adapter library for Angular",
+  "description": "Forge components adapter library for Angular.",
   "repository": "tyler-technologies-oss/forge-angular",
   "author": "Tyler Technologies, Inc.",
   "license": "Apache-2.0",
