--- a/package.json
+++ b/package.json
@@ -27,32 +27,32 @@
     "@angular/platform-browser": "^18.2.12",
     "@angular/platform-browser-dynamic": "^18.2.12",
     "@angular/router": "^18.2.12",
-    "@tylertech/forge": "^3.3.3",
-    "@tylertech/tyler-icons": "^1.12.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.6.3",
+    "@tylertech/forge": "^3.3.5",
+    "@tylertech/tyler-icons": "^1.18.1",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.8.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.12",
-    "@auto-it/conventional-commits": "^11.1.6",
-    "@auto-it/first-time-contributor": "^11.1.6",
-    "@auto-it/npm": "^11.1.6",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
+    "@auto-it/conventional-commits": "^11.3.0",
+    "@auto-it/first-time-contributor": "^11.3.0",
+    "@auto-it/npm": "^11.3.0",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@tylertech-eslint/eslint-plugin": "^1.0.12",
     "@tylertech/forge-schematics": "^1.3.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^20.14.2",
-    "auto": "^11.1.6",
-    "commitlint": "^19.3.0",
-    "husky": "^9.0.11",
+    "auto": "^11.3.0",
+    "commitlint": "^19.6.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^18.2.1",
