--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@tylertech-eslint/eslint-plugin": "^1.0.12",
     "@tylertech/forge-schematics": "^1.3.1",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^20.14.2",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.9.0",
     "auto": "^11.3.0",
     "commitlint": "^19.6.0",
     "husky": "^9.1.7",
-    "jasmine-core": "~4.0.0",
+    "jasmine-core": "^5.4.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "ng-packagr": "^18.2.1",
     "typescript": "~5.4.5",
     "webpack-bundle-analyzer": "^4.10.2"
