feat: support Forge 3.6.0

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     branches:
-      - main
+      - version-4
     paths:
       - '.github/workflows/**/*'
       - '.eslintrc.json'
