--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "@tylertech/forge-angular",
-  "version": "6.3.0",
-  "description": "Forge components adapter library for Angular",
-  "repository": "tyler-technologies-oss/forge-angular",
+  "private": true,
   "license": "Apache-2.0",
   "scripts": {
     "prepare": "husky",
