--- a/.github/workflows/codeql-analysis-default.yml
+++ b/.github/workflows/codeql-analysis-default.yml
@@ -10,7 +10,7 @@ name: "CodeQL - Default"
 
 on:
   push:
-    branches: ['main']
+    branches: ['version-6']
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ '**' ]
